dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__context_resolver__resolves_context_and_dispatches_to_tx_wheel.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG deriving sealer for credentials credentials=0xb825b05b860f8a17c74724ad21b1b2f3:0 peer_addr=127.0.0.1:4433 sender_idx=0
0 [main] TRACE g#send.context.count[send.0]=1
0 [main] TRACE c#send.pending.enq[send.0]=1
0 [main] TRACE g#send.pending.depth[send.0]=1
0 [main] TRACE m#send.pending.depth_dist[send.0]=1
